# tabpfn-v3-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  tabpfn_v3_architecture_analysis.md
huggingface_model_card/: README.md
scripts/: benchmark.py  benchmark_comprehensive.py  benchmark_expanded.py  benchmark_expanded_results.json  benchmark_optimizations.py  benchmark_results.json  convert_weights.py  generate_benchmark_figure.py  validate_weights.py
src/tabpfn_mlx/: __init__.py  aggregation.py  attention.py  config.py  convert.py  decoder.py  distribution.py  embedding.py  icl_transformer.py  layers.py  lora.py  model.py  preprocessing.py  train.py
tests/: test_v3_model.py
