[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabpfn-v3-mlx"
version = "0.1.0"
description = "Native Apple MLX port of TabPFN v3 — full 53M parameter tabular foundation model for Apple Silicon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Davide Gallitelli", email = "davidegallitelli@gmail.com" },
]
keywords = ["tabpfn", "mlx", "apple-silicon", "tabular", "classification", "in-context-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
convert = ["torch>=2.0.0", "safetensors"]
dev = [
    "pytest>=7.0",
    "scikit-learn>=1.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/dgallitelli/tabpfn-v3-mlx"
Repository = "https://github.com/dgallitelli/tabpfn-v3-mlx"

[tool.hatch.build.targets.wheel]
packages = ["src/tabpfn_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
