[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabpfn-v3-mlx"
version = "0.1.0"
description = "TabPFN v3 natively on Apple Silicon via MLX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Davide Gallitelli", email = "davidegallitelli@gmail.com" },
]
keywords = ["tabpfn", "mlx", "apple-silicon", "tabular", "classification", "in-context-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
]
dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0", "mypy>=1.0", "build", "twine"]
convert = ["torch>=2.0.0"]
examples = ["scikit-learn>=1.0", "tabpfn>=8.0"]

[project.urls]
Homepage = "https://github.com/dgallitelli/tabpfn-v3-mlx"
Documentation = "https://github.com/dgallitelli/tabpfn-v3-mlx#readme"
Repository = "https://github.com/dgallitelli/tabpfn-v3-mlx"
Issues = "https://github.com/dgallitelli/tabpfn-v3-mlx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tabpfn_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_weights: test requires pretrained checkpoint (skipped in CI)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
